--- a/index.html
+++ b/index.html
@@ -3,19 +3,58 @@
 <head>
   <meta charset="UTF-8" />
   <title>For You ❤️</title>
+
   <style>
+    * {
+      box-sizing: border-box;
+    }
+
     body {
       margin: 0;
       height: 100vh;
-      background: linear-gradient(135deg, #ffd6e8, #c7d2ff);
+      position: relative;
       display: flex;
       align-items: center;
       justify-content: center;
       font-family: "Poppins", system-ui, sans-serif;
       overflow: hidden;
+      background: #0b0b16;
+    }
+
+    /* Blurred photo background */
+    body::before {
+      content: "";
+      position: fixed;
+      inset: 0;
+      background: url("bg.jpg") center / cover no-repeat;
+      filter: blur(18px) saturate(1.1);
+      transform: scale(1.15);
+      opacity: 0.55;
+      z-index: -2;
+      animation: bgFloat 18s ease-in-out infinite alternate;
+    }
+
+    /* Soft gradient overlay */
+    body::after {
+      content: "";
+      position: fixed;
+      inset: 0;
+      background: linear-gradient(
+        135deg,
+        rgba(255, 214, 232, 0.75),
+        rgba(199, 210, 255, 0.75)
+      );
+      z-index: -1;
+    }
+
+    @keyframes bgFloat {
+      0%   { transform: scale(1.15) translate(0, 0); }
+      100% { transform: scale(1.22) translate(-14px, -12px); }
     }
 
     .card {
+      position: relative;
+      z-index: 1;
       background: rgba(255, 255, 255, 0.92);
       padding: 28px 30px;
       border-radius: 22px;
@@ -25,6 +64,7 @@
       transform: translateY(20px) scale(0.95);
       opacity: 0;
       animation: popIn 1.1s cubic-bezier(.2,.9,.2,1) forwards;
+      backdrop-filter: blur(6px);
     }
 
     .title {
@@ -75,8 +115,8 @@
     }
 
     @keyframes pulse {
-      0%, 100% { transform: scale(1); filter: drop-shadow(0 0 0 rgba(255,63,122,0)); }
-      50% { transform: scale(1.04); filter: drop-shadow(0 10px 18px rgba(255,63,122,0.18)); }
+      0%, 100% { transform: scale(1); }
+      50% { transform: scale(1.04); }
     }
 
     @keyframes float {
@@ -86,15 +126,37 @@
     }
   </style>
 </head>
+
 <body>
 
   <div class="card">
     <div class="title">for you 🫶✨</div>
-    <div class="text" id="text"></div><span class="cursor"></span>
+
+    <!-- fallback text shows if JS ever fails -->
+    <div class="text" id="text">
+Hey love 🫶
+Don’t stress yourself too much.
+I’m proud of you, always ✨
+
+I hope you get everything you dream of,
+because you truly deserve it 🤍
+
+You’re the best thing that happened to me this year,
+and I want us to stay like this forever ♾️
+
+No matter what,
+I’ll always choose you.
+I’ll always wait for you 💗
+
+I love you ❤️
+    </div>
+
+    <span class="cursor"></span>
   </div>
 
   <script>
-    const message =
+    document.addEventListener("DOMContentLoaded", () => {
+      const message =
 `Hey love 🫶
 Don’t stress yourself too much.
 I’m proud of you, always ✨
@@ -111,28 +173,31 @@ I’ll always wait for you 💗
 
 I love you ❤️`;
 
-    const textEl = document.getElementById("text");
-    let i = 0;
+      const textEl = document.getElementById("text");
+      textEl.textContent = "";
+      let i = 0;
 
-    function type() {
-      if (i < message.length) {
-        textEl.textContent += message[i++];
-        setTimeout(type, 35);
+      function type() {
+        if (i < message.length) {
+          textEl.textContent += message[i++];
+          setTimeout(type, 35);
+        }
       }
-    }
-    type();
+      type();
 
-    function heart() {
-      const h = document.createElement("div");
-      h.className = "heart";
-      h.textContent = Math.random() > 0.5 ? "❤️" : (Math.random() > 0.5 ? "💗" : "✨");
-      h.style.left = Math.random() * 100 + "vw";
-      h.style.animationDuration = (4 + Math.random() * 4) + "s";
-      h.style.fontSize = (16 + Math.random() * 18) + "px";
-      document.body.appendChild(h);
-      setTimeout(() => h.remove(), 9000);
-    }
-    setInterval(heart, 420);
+      function heart() {
+        const h = document.createElement("div");
+        h.className = "heart";
+        h.textContent = Math.random() > 0.5 ? "❤️" : (Math.random() > 0.5 ? "💗" : "✨");
+        h.style.left = Math.random() * 100 + "vw";
+        h.style.animationDuration = (4 + Math.random() * 4) + "s";
+        h.style.fontSize = (16 + Math.random() * 18) + "px";
+        document.body.appendChild(h);
+        setTimeout(() => h.remove(), 9000);
+      }
+
+      setInterval(heart, 420);
+    });
   </script>
 
 </body>
