--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       content: "";
       position: fixed;
       inset: 0;
-      background: url("bg.jpg") center / cover no-repeat;
+      background: url("images/bg.jpg") center / cover no-repeat;
       filter: blur(18px) saturate(1.1);
       transform: scale(1.15);
       opacity: 0.55;
@@ -202,3 +202,4 @@ I love you ❤️`;
 
 </body>
 </html>
+
